--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Kus/src/assets/kushlogo.png" />
+    <link rel="icon" type="image/svg+xml" href="/Kus/src/assets/kushlogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kushal Portfolio</title>
   </head>
